Bug 352416 - Faulty key event handling in App Dash search (broken dead keys, faulty control character handling)
Summary: Faulty key event handling in App Dash search (broken dead keys, faulty contro...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Application Dashboard (other bugs)
Version First Reported In: 5.4.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
: 355308 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-08 01:25 UTC by Ronan Arraes Jardim Chagas
Modified: 2015-12-06 21:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronan Arraes Jardim Chagas 2015-09-08 01:25:58 UTC
When I try to type any characters with accent (like á, à, é, ü, etc.) in Application Dashboard, it just does not show anything. Notice that this bug seems to affect just dead keys, since cedilla (ç) is working. I am using openSUSE Tumbleweed default packages (plasma 5.4.0).

Reproducible: Always

Steps to reproduce:
1. Open Application Dashboard.
2. Type any characters with accent (á, é, à, ã, etc.). For example, "cartões".

Actual results:
The characters with accent will not be displayed. In the example, it will be displayed "cartes".

Expected results:
The characters with accent must be displayed.
Comment 1 Phazeus 2015-09-08 01:46:29 UTC
Yes, for me too this characters not working (just strange circle instead), I has copy-paste them. But Russian characters all works fine (used locale ru_RU and it work).
Comment 2 Eike Hein 2015-09-21 12:36:21 UTC
So you're having the problem with a two press combo of accent+char not single presses, right?
Comment 3 Eike Hein 2015-09-21 17:19:22 UTC
Git commit 4ed7145a5d7a0dbc773714b9c273bfe0d8039186 by Eike Hein.
Committed on 21/09/2015 at 17:18.
Pushed by hein into branch 'master'.

Fix Appdash opening on the wrong screen.

M  +6    -0    applets/kicker/package/contents/ui/CompactRepresentation.qml
M  +42   -9    applets/kicker/plugin/fullscreenwindow.cpp
M  +10   -2    applets/kicker/plugin/fullscreenwindow.h

http://commits.kde.org/plasma-desktop/4ed7145a5d7a0dbc773714b9c273bfe0d8039186
Comment 4 Ronan Arraes Jardim Chagas 2015-09-22 16:22:49 UTC
Hi Eike!

Thanks! Yes, I am having problems with a combo accent + char. I will tell openSUSE devs if they can add this patch to plasma.
Comment 5 Eike Hein 2015-09-22 22:09:41 UTC
Sorry, actually the above was me copying the wrong bug number - this is not fixed. Thanks for the reply!
Comment 6 Eike Hein 2015-10-18 15:25:25 UTC
I've been trying to reproduce this problem, but I actually can't get dead keys to work in Qt 5 applications at all (but they work fine in GTK+ and Qt 4  ones). Do dead keys work for you in any Qt 5 app?
Comment 7 Eike Hein 2015-10-18 16:52:00 UTC
The above turned out to be an ibus problem, I can get dead keys to work by manipulating the active QT_IM_MODULE. I subsequently played around with moving event handling from QML into C++, but it turns out on X11 Qt doesn't deliver dead key events to QQuickWindow::keyPressEvent() at all. I'll have to get more creative in finding a workaround.
Comment 8 Eike Hein 2015-11-14 19:49:16 UTC
*** Bug 354754 has been marked as a duplicate of this bug. ***
Comment 9 Eike Hein 2015-11-14 19:49:22 UTC
*** Bug 355308 has been marked as a duplicate of this bug. ***
Comment 10 Eike Hein 2015-12-06 21:35:37 UTC
Git commit 78b4096044fd8e125e5170f00eb5eb1944a2e4a4 by Eike Hein.
Committed on 06/12/2015 at 21:34.
Pushed by hein into branch 'Plasma/5.5'.

Rewrite Appdash key handling.
Related: bug 354754, bug 356269

M  +1    -1    applets/kicker/CMakeLists.txt
M  +4    -52   applets/kicker/package/contents/ui/DashboardRepresentation.qml
M  +1    -1    applets/kicker/package/contents/ui/ItemGridView.qml
R  +62   -17   applets/kicker/plugin/dashboardwindow.cpp [from: applets/kicker/plugin/fullscreenwindow.cpp - 063% similarity]
R  +12   -5    applets/kicker/plugin/dashboardwindow.h [from: applets/kicker/plugin/fullscreenwindow.h - 082% similarity]
M  +2    -2    applets/kicker/plugin/kickerplugin.cpp

http://commits.kde.org/plasma-desktop/78b4096044fd8e125e5170f00eb5eb1944a2e4a4