Fix Appdash opening on the wrong screen.

BUG:352416